--- a/contacts.css
+++ b/contacts.css
@@ -200,6 +200,12 @@ textarea {
         flex-direction: column;
         justify-content: space-between;
     }
+    .wrapper.every{
+        width: calc(100% - 20px);
+    }
+    .form-name-main {
+        margin: auto;
+    }
 
     .burger-menu span {
         width: 100%;
