--- a/style.css
+++ b/style.css
@@ -523,6 +523,15 @@ footer .wrapper .contacts {
 footer .wrapper .contacts a:hover {
     color: #fd8300;
 }
+.infos::before{
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 51px;
+    background: #e4e4ec;
+    top: calc(50% - 186px);
+    left: 49%;
+}
 
 footer .contacts .tell {
     position: relative;
@@ -572,7 +581,9 @@ figure {
 
 
 @media (min-width: 320px) {
-
+    .infos::before{
+        display: none;
+    }
     .header-menu .wrapper {
         flex-direction: column;
         flex-wrap: wrap;
@@ -746,7 +757,7 @@ figure {
     }
 
     .header-menu .wrapper {
-        width: calc(100% - 20px);
+        width: 90%;
         padding: unset;
     }
 
@@ -819,7 +830,7 @@ figure {
 
     .footer .wrapper.flex.start{
         align-items: start;
-        width: calc(100% - 20px);
+        width: 90%;
     }
     .company .wrapper .buttom {
         display: flex;
@@ -862,7 +873,9 @@ figure {
     .company .wrapper.flex>div {
         width: fit-content;
     }
-
+    .infos::before{
+        display: block;
+    }
     .company .wrapper .buttom {
         display: block;
     }
